--- a/.github/workflows/author-update.yml
+++ b/.github/workflows/author-update.yml
@@ -35,7 +35,7 @@ jobs:
           TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
       - run: git add .
-      - run: git config --local user.email "???"
-      - run: git config --local user.name "anyunderhood"
+      - run: git config --local user.email "ci@github"
+      - run: git config --local user.name "mobileunderhood"
       - run: git commit -m 'Update of authors happened'
       - run: git push
