--- a/.github/workflows/author-update.yml
+++ b/.github/workflows/author-update.yml
@@ -2,9 +2,7 @@ name: Author update
 
 on:
   pull_request:
-    types: [opened, edited]
-  issue_comment:
-    types: [created, edited]
+    types: [opened]
 
 jobs:
   build:
