Fix running on forks

--- a/.github/workflows/author-update.yml
+++ b/.github/workflows/author-update.yml
@@ -2,11 +2,12 @@ name: Author update
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, edited]
 
 jobs:
   build:
-
+    # Check that this event runs only on this repo, not forks.
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,6 +21,7 @@ jobs:
           trigger: "#update"
       - uses: actions/checkout@v2
         with:
+          repository: ${{ github.base_ref }}
           ref: ${{ github.head_ref }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
